--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hubot-clarifai",
-  "version": "0.0.0",
+  "name": "@jaythomas/hubot-clarifai",
+  "version": "0.1.0",
   "description": "Hubot script for identifying images using Clarifai",
   "main": "index.js",
   "repository": {
